# otus-cpp.homework02.nearest_degree_of_two

./: .travis.yml  CMakeLists.txt  README.md  main.cpp
